--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "react-timestamp",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "A React component for displaying a datetime in the local timezone",
+  "main": "lib/timestamp.js",
   "scripts": {
-    "test": "mocha test/index.js --compilers js:babel-register"
+    "test": "mocha test/index.js --compilers js:babel-register",
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm test && npm run compile"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.3.13",
