--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run compile && mocha test/index.js --compilers js:babel-register",
     "compile": "babel -d lib/ src/",
-    "prepublish": "npm test"
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,8 @@
     "url": "https://github.com/nathanhoad/react-timestamp/issues"
   },
   "homepage": "https://github.com/nathanhoad/react-timestamp#readme",
-  "dependencies": {
-    "react": "^0.14.3"
+  "peerDependencies": {
+    "react": "*"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
