--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/timestamp.js",
   "scripts": {
     "test": "npm run compile && mocha test/index.js --compilers js:babel-register",
-    "compile": "babel -d lib/ src/",
+    "compile": "node_modules/.bin/babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
   "repository": {
