--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "declaration": false,
+    "declaration": true,
     "jsx": "react",
     "strictNullChecks": true,
     "experimentalDecorators": true,
