Update to React 18
Closes #22

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "jsx": "react",
     "strictNullChecks": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "lib": ["dom", "esnext"],
+    "esModuleInterop": true
+  },
+  "exclude": ["node_modules"]
 }
