--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "source": "src/index.tsx",
   "scripts": {
-    "test": "alsatian ./tests/**/*.spec.ts*",
+    "test": "jest",
     "prepublishOnly": "npm test && npm run build",
     "clean": "rimraf dist",
     "build": "npm run clean && microbundle --format=cjs --sourcemap=false",
@@ -21,24 +21,28 @@
     "datetime"
   ],
   "author": "Nathan Hoad <nathan@nathanhoad.net>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/nathanhoad/react-timestamp/issues"
   },
   "homepage": "https://github.com/nathanhoad/react-timestamp#readme",
   "peerDependencies": {
-    "react": "^16.9.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.0",
-    "@types/react-test-renderer": "^16.9.0",
-    "alsatian": "^3.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.1.2",
+    "@types/react": "^18.0.21",
+    "jest": "^29.2.0",
+    "jest-environment-jsdom": "^29.2.0",
     "microbundle": "^0.15.0",
     "parcel": "^2.5.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-test-renderer": "^16.9.0",
+    "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^2.6.3",
-    "rollup": "^1.7.3"
+    "rollup": "^1.7.3",
+    "ts-jest": "^29.0.3"
   }
 }
